@@ -1,9 +1,10 @@
 2.3.0 | ??-???-????
 ===================
-    - nexl.functions.system renamed to nexl.funcs.sys ( nexl.functions.system is left for backward compatibility )
-    - nexl.functions.user renamed to nexl.funcs.usr ( nexl.functions.user is left for backward compatibility )
+    - reserved ` character for future actions
     - added assign variables action = .Now it's possible to use runtime variables inside nexl expressions
     - added separator action ;
+    - nexl.functions.system renamed to nexl.funcs.sys ( nexl.functions.system is left for backward compatibility )
+    - nexl.functions.user renamed to nexl.funcs.usr ( nexl.functions.user is left for backward compatibility )
     - inc(), dec(), div(), mult(), mod() now can accept multiple arguments
     - added concat() nexl system function to concat primitives, array and objects. Function accepts multiple arguments
     - added keys() and vals() nexl system functions to retrieve keys and values from object at specified level
